--- a/intermodulationdemo/src/main/resources/de/thkoeln/intermodulationdemo/config.properties
+++ b/intermodulationdemo/src/main/resources/de/thkoeln/intermodulationdemo/config.properties
@@ -2,16 +2,16 @@ def.SamplesPow: 12
 def.I_S: 10e-14
 def.V_T: 25e-3
 def.r_BE: 0.321
-def.R_C: 10000
-def.R_S: 100
-def.R_L: 100
+def.R_C: 10000000
+def.R_S: 0.00001
+def.R_L: 50
 def.T_0: 290
 def.D_f: 100
 def.F: 5
 def.V_BE: 578e-3
-def.B = 250
+def.B = 75
 def.SweepStart: -100
-def.SweepDelta: 200
+def.SweepDelta: 150
 
 const.k: 1.380649e-23
 
