--- a/intermodulationdemo/pom.xml
+++ b/intermodulationdemo/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>javafx-web</artifactId>
             <version>15.0.1</version>
         </dependency>
+         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>15.0.1</version>
+        </dependency>
         <dependency>
     		<groupId>org.apache.commons</groupId>
     		<artifactId>commons-math3</artifactId>
